path of images and files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <!-- Icon Bar (Sidebar - hidden on small screens) -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
-  <img src="D:\image\website\My_Image1.png" style="width:100%">
+  <img src="My_Image1.png" style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
@@ -64,7 +64,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Zeal Ardeshna</h1>
     <p>Student Role</p>
-    <img src="D:\image\website\11zon_cropped.png" alt="boy" class="w3-image" width="300" height="300">
+    <img src="11zon_cropped.png" alt="boy" class="w3-image" width="300" height="300">
   </header>
 
   <!-- About Section -->
@@ -116,8 +116,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
 
 
-    <a href="D:\image\website\Zeal Ardeshna.pdf" target="_blank">
-    <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="D:\image\website\Zeal Ardeshna.pdf">
+    <a href="Zeal Ardeshna.pdf" target="_blank">
+    <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Zeal Ardeshna.pdf">
       <i class="fa fa-download"></i> Preview Resume
     </button>
     </a>
@@ -176,9 +176,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-text-light-grey" align="left">University of Michigan</h3>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Introduction to HTML5_page-0001.jpg" target="_blank">
+      <a id="td" href="Introduction to HTML5_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Introduction to HTML5_page-0001.jpg" width="200" height="200">
+          <img src="Introduction to HTML5_page-0001.jpg" width="200" height="200">
           <p></p>
           Intoduction to HTML
         </div>
@@ -186,9 +186,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Introduction to CSS3_page-0001.jpg"target="_blank">
+      <a id="td" href="Introduction to CSS3_page-0001.jpg"target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Introduction to CSS3_page-0001.jpg" width="200" height="200">
+          <img src="Introduction to CSS3_page-0001.jpg" width="200" height="200">
           <p></p>
           Introduction to CSS3
         </div>
@@ -196,9 +196,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Interactive with Javascript_page-0001.jpg" target="_blank">
+      <a id="td" href="Interactive with Javascript_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Interactive with Javascript_page-0001.jpg" width="200" height="200">
+          <img src="Interactive with Javascript_page-0001.jpg" width="200" height="200">
           <p></p>
           Interactive with Javascript
         </div>
@@ -206,9 +206,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Advanced Styling with Responsive Design_page-0001.jpg" target="_blank">
+      <a id="td" href="Advanced Styling with Responsive Design_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Advanced Styling with Responsive Design_page-0001.jpg" width="200" height="200">
+          <img src="Advanced Styling with Responsive Design_page-0001.jpg" width="200" height="200">
           <p></p>
           Advanced Styling with Responsive Design
         </div>
@@ -216,9 +216,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Web design for everybody capstone_page-0001.jpg" target="_blank">
+      <a id="td" href="Web design for everybody capstone_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Web design for everybody capstone_page-0001.jpg" width="200" height="200">
+          <img src="Web design for everybody capstone_page-0001.jpg" width="200" height="200">
           <p></p>
           Web design for everybody capstone
         </div>
@@ -226,9 +226,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\specialization foe web design_page-0001.jpg" target="_blank">
+      <a id="td" href="specialization foe web design_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\specialization foe web design_page-0001.jpg" width="200" height="200">
+          <img src="specialization foe web design_page-0001.jpg" width="200" height="200">
           <p></p>
           Specialization for web design
         </div>
@@ -236,9 +236,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Programming for Everybody (Getting Started with python)_page-0001.jpg" target="_blank">
+      <a id="td" href="Programming for Everybody (Getting Started with python)_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Programming for Everybody (Getting Started with python)_page-0001.jpg" width="200" height="200">
+          <img src="Programming for Everybody (Getting Started with python)_page-0001.jpg" width="200" height="200">
           <p></p>
           Getting Started with python
         </div>
@@ -246,9 +246,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Using Python to Access Web Data_page-0001.jpg" target="_blank">
+      <a id="td" href="Using Python to Access Web Data_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Using Python to Access Web Data_page-0001.jpg" width="200" height="200">
+          <img src="Using Python to Access Web Data_page-0001.jpg" width="200" height="200">
           <p></p>
           Using Python to Access Web Data
         </div>
@@ -256,9 +256,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Python data structure_page-0001.jpg" target="_blank">
+      <a id="td" href="Python data structure_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Python data structure_page-0001.jpg" width="200" height="200">
+          <img src="Python data structure_page-0001.jpg" width="200" height="200">
           <p></p>
           Python data structure
         </div>
@@ -266,9 +266,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Using database with Python_page-0001.jpg" target="_blank">
+      <a id="td" href="Using database with Python_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Using database with Python_page-0001.jpg" width="200" height="200">
+          <img src="Using database with Python_page-0001.jpg" width="200" height="200">
           <p></p>
           Using database with Python
         </div>
@@ -276,9 +276,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Capston Retrieving Processing and Visualizing Data with Python_page-0001.jpg" target="_blank">
+      <a id="td" href="Capston Retrieving Processing and Visualizing Data with Python_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Capston Retrieving Processing and Visualizing Data with Python_page-0001.jpg" width="200" height="200">
+          <img src="Capston Retrieving Processing and Visualizing Data with Python_page-0001.jpg" width="200" height="200">
           <p></p>
           Capston Retrieving Processing and Visualizing Data with Python
         </div>
@@ -286,9 +286,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Pyhton for Everybody_page-0001.jpg" target="_blank">
+      <a id="td" href="Pyhton for Everybody_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Pyhton for Everybody_page-0001.jpg" width="200" height="200">
+          <img src="Pyhton for Everybody_page-0001.jpg" width="200" height="200">
           <p></p>
           Pyhton for Everybody
         </div>
@@ -301,9 +301,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-text-light-grey" align="left">University of California</h3>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Data Structure_page-0001.jpg" target="_blank">
+      <a id="td" href="Data Structure_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Data Structure_page-0001.jpg" width="200" height="200">
+          <img src="Data Structure_page-0001.jpg" width="200" height="200">
           <p></p>
           Data Structure
         </div>
@@ -311,9 +311,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </div>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\SQL for data science_page-0001.jpg" target="_blank">
+      <a id="td" href="SQL for data science_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\SQL for data science_page-0001.jpg" width="200" height="200">
+          <img src="SQL for data science_page-0001.jpg" width="200" height="200">
           <p></p>
           SQL for data science
         </div>
@@ -326,9 +326,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-text-light-grey" align="left">Tata Consultancy Service ( TCS ) </h3>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Career Edge by TCS_page-0001.jpg" target="_blank">
+      <a id="td" href="Career Edge by TCS_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Career Edge by TCS_page-0001.jpg" width="200" height="200">
+          <img src="Career Edge by TCS_page-0001.jpg" width="200" height="200">
           <p></p>
           Career Edge by TCS
         </div>
@@ -341,9 +341,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-text-light-grey" align="left">IBM</h3>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Introduction to Cybersecurity Tools & Cyber_page-0001.jpg" target="_blank">
+      <a id="td" href="Introduction to Cybersecurity Tools & Cyber_page-0001.jpg" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
-          <img src="D:\image\website\Introduction to Cybersecurity Tools & Cyber_page-0001.jpg" width="200" height="200">
+          <img src="Introduction to Cybersecurity Tools & Cyber_page-0001.jpg" width="200" height="200">
           <p></p>
           Introduction to Cybersecurity Tools & Cyber
         </div>
@@ -356,11 +356,11 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h3 class="w3-text-light-grey" align="left">In progress...</h3>
 
     <div class="w3-quarter w3-section">
-      <a id="td" href="D:\image\website\Syllabus+for+100+Days+of+Python (1).pdf" target="_blank">
+      <a id="td" href="Syllabus+for+100+Days+of+Python (1).pdf" target="_blank">
         <div class="w3-padding-16 w3-black w3-opacity w3-hover-opacity-off">
           100 days of code complete professional python bootcamp
-          <a href="D:\image\website\Syllabus+for+100+Days+of+Python (1).pdf" target="_blank">
-            <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="D:\image\website\Syllabus+for+100+Days+of+Python (1).pdf">
+          <a href="Syllabus+for+100+Days+of+Python (1).pdf" target="_blank">
+            <button class="w3-button w3-light-grey w3-padding-large w3-section" onclick="Syllabus+for+100+Days+of+Python (1).pdf">
               <i class="fa fa-download"></i> Topics Cover in this course
             </button>
           </a>
@@ -378,16 +378,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="D:\image\website\IMG_6025.JPG" style="width:100%">
-        <img src="D:\image\website\IMG-20210920-WA0083.jpg" style="width:100%">
-        <img src="D:\image\website\IMG_20211112_094801_Bokeh.jpg" style="width:100%" height="624">
-        <img src="D:\image\website\IMG_20211110_161545.jpg" style="width:100%" height="600px">
+        <img src="IMG_6025.JPG" style="width:100%">
+        <img src="IMG-20210920-WA0083.jpg" style="width:100%">
+        <img src="IMG_20211112_094801_Bokeh.jpg" style="width:100%" height="624">
+        <img src="IMG_20211110_161545.jpg" style="width:100%" height="600px">
       </div>
 
       <div class="w3-half">
-        <img src="D:\image\website\IMG-20210920-WA0078.jpg" style="width:100%">
-        <img src="D:\image\website\IMG20211113161843.jpg" style="width:100%">
-        <img src="D:\image\website\20190511_174802.jpg" style="width:100%">
+        <img src="IMG-20210920-WA0078.jpg" style="width:100%">
+        <img src="IMG20211113161843.jpg" style="width:100%">
+        <img src="20190511_174802.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
